# basic-lstm

./: CMakeLists.txt  README.md  main.cpp
LSTMCell/: LSTMCell.cpp  LSTMCell.h  lstm.cpp  lstm.h
idea/: editor.xml  misc.xml  workspace.xml
include/: activation_functions.h  lstm_layer.h
src/: activation_functions.cpp  lstm_layer.cpp
